# metrics

./: .coverage  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-web  Makefile  README.md  coverage.xml  docker-compose.yml  new_requirements.txt  nosetests.xml  pyproject.toml  requirements.txt  requirements_verbose.txt  run.sh  setup.py  sonar-project.properties
data/: xcsp17.csv  xcsp18.json
data/christophe/: ProblemFile-Bibd-sc-09-03-09_c18_bs1_node127.alineos.net_2020_08_21_12_59.xml  ProblemFile-Bibd-sc-12-06-05_c18_bs0_node150.alineos.net_2020_08_21_12_38.xml  ProblemFile-Bibd-sc-22-033-12-08-04_c18_bs0_node149.alineos.net_2020_08_21_12_38.xml  ProblemFile-Bibd-sc-34-085-30-12-10_c18_bs0_node149.alineos.net_2020_08_21_12_38.xml  ProblemFile-Bibd-sum-07-03-01_c18_bs1_node127.alineos.net_2020_08_21_12_59.xml  ProblemFile-Bibd-sum-07-03-01_c18_bs2_node123.alineos.net_2020_08_21_13_27.xml  ProblemFile-Bibd-sum-34-085-30-12-10_c18_bs2_node116.alineos.net_2011_10_08_02_59.xml  ProblemFile-CarSequencing-04-72_c18_bs2_node137.alineos.net_2020_08_21_13_29.xml  ProblemFile-CarSequencing-60-01_c18_bs0_node143.alineos.net_2020_08_21_12_39.xml  ProblemFile-CarSequencing-60-02_c18_bs1_node127.alineos.net_2020_08_21_12_59.xml  (+120 more)
docs/: LICENSE.md  Makefile  README.md  code.md  code.rst  conf.py  index.md  index.rst  raw-rst.lua  requirements.txt  scalpel-config.md  scalpel-config.rst  tutorial.md  tutorial.rst  wallet.md  wallet.rst
metrics/: __init__.py  constants.py
nginx/: Dockerfile  nginx.conf
(+1172 files in other folders)
